--- a/class5/class5.html
+++ b/class5/class5.html
@@ -92,6 +92,9 @@ else if (buttonState == LOW);{
 }
 </code></pre>
 <p>Again, this code didn't code. I was running out of ideas, and I decided to use tinkercad with that I would realize something. My code actually worked perfectly in the simulation. I found that the LED 2 was burned. I rerun the program, and it partially works. 
+  <video width="100%" controls>
+       <source src="2led2b.mov" type="video/mp4">
+    </video><br><br>
 
 The only thing was that the LEDs didn't turn off after I stopped pressing the button. And I try several things, but I couldn't make it. My theory is that I'm not actually breaking the for, so the program never gets to the low point. I would actually code this in a <code>while</code> and with other methods but that wasn´t part of the assignment.
 </p>
