--- a/class5/class5.html
+++ b/class5/class5.html
@@ -100,9 +100,9 @@ The only thing was that the LEDs didn't turn off after I stopped pressing the bu
 </p>
 <p>
   <strong>Desing with Fusion 360</strong><br>
-  For the 3D design, I created a rack and a pinion with the idea that I would end up using them in my final project. When I was building it and thinking about the whole design, I realized that I was doing what I know how to do it. In every competition that I have participated, I worked in the robot design and construction, so I feel comfortable doing it. For that reason, I decided to change my final project to something that I haven't work in off yet. Anyways this is the tutorial that I used is from Autodesk, and even though they use an older version of fusion is easy to follow. And this is the design I come up with:
+  For the 3D design, I created a rack and a pinion with the idea that I would end up using them in my final project. When I was building it and thinking about the whole design, I realized that I was doing what I know how to do it. In every competition that I have participated, I worked in the robot design and construction, so I feel comfortable doing it. For that reason, I decided to change my final project to something that I haven't work in off yet. Anyways this is the <a href="https://knowledge.autodesk.com/support/fusion-360/learn-explore/caas/screencast/Main/Details/a7992d99-5d4d-48c2-b971-a86ba3014608.html"><strong>tutorial</strong></a> that I used is from Autodesk, and even though they use an older version of fusion is easy to follow. And this is the design I come up with:
 </p>
-<img src="rack-pinion.png" alt="rack-pinion" style="width: 45%">
+<img src="rack-pinion.png" alt="rack-pinion" style="width: 45%"> 
 </div>
 </body>
 </html>
