--- a/assignments.html
+++ b/assignments.html
@@ -8,6 +8,7 @@ p.big {
 </style>
 <link rel="stylesheet" type="text/css" href="mystyle.css">
 <link  rel="icon"   href="icon.png" type="image/png" />
+<script src="script.js"></script>
 </head>
 <body>
 	<nav>
