--- a/class2/class2.html
+++ b/class2/class2.html
@@ -3,6 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="../mystyle.css">
   <link  rel="icon"   href="../icon.png" type="image/png" />
+  <script src="script.js"></script>
 </head>
 <body>
 <nav>
