--- a/assignments.html
+++ b/assignments.html
@@ -46,7 +46,7 @@ p.big {
     <tr>
     </tr>
    		 <th class="asb"><a class="active" href="class4/class4.html">Class 4</a></th>
-    	<th class="asb"><a class="active" href="">Class 5</a></th>
+    	<th class="asb"><a class="active" href="class5/class5.html">Class 5</a></th>
     	<th class="asb"><a class="active" href="">Class 6</a></th>
     </tr>
     <tr>
