--- a/class3/class3.html
+++ b/class3/class3.html
@@ -11,31 +11,31 @@
 </head>
 <body>
 <nav>
-	<div class="topnav">
-			<a class="active" href="../index.html">Home</a>
-			<a class="active" href="../About-me/about-me.html">About me</a>
-			<a class="active" href="../Final-project/Final_projects.html">Final Project</a>
-			<div class="dropdown">
+  <div class="topnav">
+      <a class="active" href="../index.html">Home</a>
+      <a class="active" href="../About-me/about-me.html">About me</a>
+      <a class="active" href="../Final-project/Final_projects.html">Final Project</a>
+      <div class="dropdown">
     <button class="dropbtn" href="../assignments.html">Assignments
       <i class="fa fa-caret-down"></i>
     </button>
-       <div class="dropdown-content">
+    <div class="dropdown-content">
      <a href="../class1/class1.html">Class 1</a>
       <a href="../class2/class2.html">Class 2</a>
       <a href="../class3/class3.html">Class 3</a>
       <a href="../class4/class4.html">Class 4</a>
       <a href="../class5/class5.html">Class 5</a>
-      <a href="#">Class 6</a>
-      <a href="#">Class 7</a>
-      <a href="#">Class 8</a>
-      <a href="#">Class 9</a>
-      <a href="#">Class 10</a>
-      <a href="#">Class 11</a>
-      <a href="#">Class 12</a>
+      <a href="../class6/class6.html">Class 6</a>
+      <a href="../class7/class7.html">Class 7</a>
+      <a href="../class8/class8.html">Class 8</a>
+      <a href="../class9/class9.html">Class 9</a>
+      <a href="../class10/class10.html">Class 10</a>
+      <a href="../class11/class11.html">Class 11</a>
+      <a href="../class12/class12.html">Class 12</a>
     </div>
   </div>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
-	</div>	
+  </div>  
 </nav>
 <h1>Circuit</h1>
 <div class="paragraph">
