--- a/class6/class6.html
+++ b/class6/class6.html
@@ -40,8 +40,8 @@
 <h1>More 3D models</h1>
 <div class="paragraph">
   <p>
-    I decided to work on the 3D models that I would need for my final project. This consists of 2 cylinders that are connected by a single base and top. I made it like this to make de access to de circuit easier. My draws are not the best, but here is the idea:
-<img src="d1.png" alt="1 draw" style="width: 45%"> <img src="d2.png" alt="2 draw" style="width: 45%">
+    I decided to work on the 3D models that I would need for my final project. This consists of 2 cylinders that are connected by a single base and top. I made it like this to make de access to de circuit easier. My draws are not the best, but here is the idea:<br><br>
+<img src="d1.png" alt="1 draw" style="width: 45%"> <img src="d2.png" alt="2 draw" style="width: 45%"><br><br>
     I work with this connect and work with it. Doing that, I realized that wasn't a code problem that was a connection problem. <a href="https://www.youtube.com/watch?v=PLpwAjt5VYE"><strong>video</strong></a> to make the ”box” style. However, I modified to my necessities, making it with a hole. Building the second cylinder has faster because I just needed to repeat the process in a bigger scale. Finally, I took the two bottoms of the cylinders and connected them in a separate document. Download them here:<br><br>
    <a download href="smallb.f3d"><strong>Small cylinder</strong></a> <br><br>
    <a download href="bigc.f3d"><strong>Big cylinder</strong></a><br><br>
