navbar and fix mistakes

--- a/assignments.html
+++ b/assignments.html
@@ -13,9 +13,9 @@ p.big {
 <body>
 <nav>
   <div class="topnav">
-      <a class="active" href="../index.html">Home</a>
-      <a class="active" href="../About-me/about-me.html">About me</a>
-      <a class="active" href="../Final-project/Final_projects.html">Final Project</a>
+      <a class="active" href="index.html">Home</a>
+      <a class="active" href="About-me/about-me.html">About me</a>
+      <a class="active" href="Final-project/Final_projects.html">Final Project</a>
       <div class="dropdown">
     <button class="dropbtn" href="../assignments.html">Assignments
       <i class="fa fa-caret-down"></i>
