class 6 dw and first part class7

--- a/class6/class6.html
+++ b/class6/class6.html
@@ -42,11 +42,16 @@
   <p>
     I decided to work on the 3D models that I would need for my final project. This consists of 2 cylinders that are connected by a single base and top. I made it like this to make de access to de circuit easier. My draws are not the best, but here is the idea:<br><br>
 <img src="d1.png" alt="1 draw" style="width: 45%"> <img src="d2.png" alt="2 draw" style="width: 45%"><br><br>
-    I work with this connect and work with it. Doing that, I realized that wasn't a code problem that was a connection problem. <a href="https://www.youtube.com/watch?v=PLpwAjt5VYE"><strong>video</strong></a> to make the ”box” style. However, I modified to my necessities, making it with a hole. Building the second cylinder has faster because I just needed to repeat the process in a bigger scale. Finally, I took the two bottoms of the cylinders and connected them in a separate document. Download them here:<br><br>
-   <a download href="smallb.f3d"><strong>Small cylinder</strong></a> <br><br>
-   <a download href="bigc.f3d"><strong>Big cylinder</strong></a><br><br>
-   <a download href="tapa.f3d"><strong>Cylinder top</strong></a><br><br>
-   <a download href="base.f3d"><strong>Cylinder base</strong></a><br><br>
+    I work with this connect and work with it. Doing that, I realized that wasn't a code problem that was a connection problem. <a href="https://www.youtube.com/watch?v=PLpwAjt5VYE"><strong>video</strong></a> to make the ”box” style. However, I modified to my necessities, making it with a hole. Building the second cylinder has faster because I just needed to repeat the process in a bigger scale. Finally, I took the two bottoms of the cylinders and connected them in a separate document. <br><br>
+<img src="i1.png" alt="1 pic" style="width: 45%"> <img src="i2.png" alt="2 pic" style="width: 45%"><br><br>
+    Download the models here:<br><br>
+   <a download href="smallb.f3d"><strong>Small cylinder f3d</strong></a>-  <a download href="smallc.stl"><strong>Small cylinder stl</strong></a>- <a download href="smallc.gcode"><strong>Small cylinder gcode</strong></a> <br><br>
+
+   <a download href="bigc.f3d"><strong>Big cylinder f3d</strong></a>- <a download href="bigc.stl"><strong>Big cylinder stl</strong></a>- <a download href="bigc.gcode"><strong>Big cylinder gcode</strong></a><br><br>
+
+   <a download href="tapa.f3d"><strong>Cylinder top f3d</strong></a>-  <a download href="top.stl"><strong>Cylinder top stl</strong></a>- <a download href="top.gcode"><strong>Cylinder top gcode</strong></a><br><br>
+
+   <a download href="base.f3d"><strong>Cylinder base f3d</strong></a> -<a download href="base.stl"><strong>Cylinder base stl</strong></a>- <a download href="base.gcode"><strong>Cylinder base gcode</strong></a><br><br>
    For the photogrammetry app, I used Qlone, which requires printing a mat. To get a better measurement, I printed both the horizontal and the vertical ones.  The app works with q dome style in which they show you what parts are already recognized. First, I tried with the small bottle because it had a lot of details that would be tedious to create in the fusion 360. Sadly, the app couldn't get an accurate model, even though I use different measurements in various positions. For those reasons, I change to a simpler body; in this case, the app got it, okay, but with the edition tool, I could manually perfect the figure. Still, I couldn't get the exact shape. I wouldn't recommend this app because it took so much time to take the measurements for the results that I gave you. Here are some pictures of the process<br><br>
    <img src="de1.PNG" alt="1 pic" style="width: 45%"> <img src="de2.PNG" alt="2 pic" style="width: 45%"><br><br>
    <img src="de3.PNG" alt="3 pic" style="width: 45%"> <img src="de4.PNG" alt="4 pic" style="width: 45%"><br><br>
