--- a/class6/class6.html
+++ b/class6/class6.html
@@ -47,7 +47,7 @@
     Download the models here:<br><br>
    <a download href="smallb.f3d"><strong>Small cylinder f3d</strong></a>-  <a download href="smallc.stl"><strong>Small cylinder stl</strong></a>- <a download href="smallc.gcode"><strong>Small cylinder gcode</strong></a> <br><br>
 
-   <a download href="bigc.f3d"><strong>Big cylinder f3d</strong></a>- <a download href="bigc.stl"><strong>Big cylinder stl</strong></a>- <a download href="bigc.gcode"><strong>Big cylinder gcode</strong></a><br><br>
+   <a download href="bigc.f3d"><strong>Big cylinder f3d</strong></a>- <a download href="bigc.stl"><strong>Big cylinder stl</strong></a>- <a download href="bigc.gcode.zip"><strong>Big cylinder gcode</strong></a><br><br>
 
    <a download href="tapa.f3d"><strong>Cylinder top f3d</strong></a>-  <a download href="top.stl"><strong>Cylinder top stl</strong></a>- <a download href="top.gcode"><strong>Cylinder top gcode</strong></a><br><br>
 
