--- a/class8/class8.html
+++ b/class8/class8.html
@@ -123,6 +123,15 @@ void loop() {
       }
   }
   </code></pre>
+  <p>
+    <strong>Pre project</strong> <br>
+  Finally, this week I worked on a pre-project. With the IR sensor and the led strip, I garnered a code that would be the base for my final project. I use this <a href="https://www.arduino.cc/en/Tutorial/StateChangeDetection"><strong>website</strong></a> as a guide because it was for a button, and I was using a phototransistor but was similar. Also, I wanted to mention this <a href="https://www.arduino.cc/reference/en/"><strong>resource</strong></a> that I use all the time when I'm coding, and it's super useful. This is the code and a video of it working.
+  </p>
+   <video width="100%" controls>
+       <source src="preproject.mov" type="video/mp4">
+    </video><br><br>
+ <iframe src="precode.html" width="100%" height="300" style="border:1px solid black;">
+</iframe>
   </div>
 
 </body>
