--- a/class9/class9.html
+++ b/class9/class9.html
@@ -44,7 +44,7 @@
     In this assignment, I wanted to use an LCD displayer to print a random Pokemon name, experience, and if it is hidden from an API. I had an LCD in my house, but I have never used it before. Well, I did, but in my school, we're it was already connected to it. So that was the first thing I had to figure out. I soldier these pins and then inserted them into the breadboard. After that, I made the bridge to the huzzah board with jumper wires. I also used a potentiometer to control the contrast.
   </p>
   <p>
-   Yesterday the Fablab that is printing my pieces contacted me because one of the models had a problem. For that reason, I need to design 3 of the four parts. So I couldn't finish my assignment. What I did was the same, but instead of printing in the LCD I printed in the serial monitor. 
+   Yesterday the Fablab that is printing my pieces contacted me because one of the models had a problem. For that reason, I needed to design 3 of the four parts again. So I couldn't finish my assignment. What I did was the same, but instead of printing in the LCD I printed in the serial monitor. 
   </p>
   <pre><code class="language-arduino">
  #include <ArduinoJson.h>
@@ -116,7 +116,7 @@ void loop() {
 }
   </code></pre>
 <p>
-  I used a lot of websites this week, you can see all of them here:
+  I used a lot of websites this week, you can see all of them here:<br>
   <a href="https://randomnerdtutorials.com/decoding-and-encoding-json-with-arduino-or-esp8266/"><strong>website</strong></a><br>
    <a href="https://arduinojson.org/v6/api/misc/deserializationerror/"><strong>website</strong></a><br>
     <a href="https://pokeapi.co/"><strong>API</strong></a>
