--- a/class10/stepper.html
+++ b/class10/stepper.html
@@ -35,7 +35,7 @@
   firebase.analytics();
 
 
-	function turnOn(){
+	function candyr(){
 		console.log("turning on");
 		ref.update({
 			"Candyr": "ON"
