--- a/class10/class10.html
+++ b/class10/class10.html
@@ -39,7 +39,7 @@
 </nav>
 <h1>Machine</h1>
 <div class="paragraph">
-  <a href="stepper.html">stepper</a> <p>1</p>
+  <a href="stepper.html">stepper</a> <p>1-2</p>
 </div>
 </body>
 </html>
