--- a/class10/stepper.html
+++ b/class10/stepper.html
@@ -10,7 +10,6 @@
 	<!-- button names-->
 	<button id="candy-r" name="candyr">Right candy </button> 
 	<button id="candy-l" name="candyl">Left candy </button>
-
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-app.js"></script>
 
@@ -32,7 +31,7 @@
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
-
+  firebase.analytics();
 
 var ref = firebase.database().ref("/");
 
