--- a/class10/stepper.html
+++ b/class10/stepper.html
@@ -36,7 +36,7 @@
 var ref = firebase.database().ref("/");
 
 	document.getElementById('candy-r').addEventListener('click', candyR, false);
-	document.getElementById('turn-off').addEventListener('click', turnOff, false);
+	document.getElementById('candy-l').addEventListener('click', turnOff, false);
 
 	function candyR(){
 		console.log("turning on");
@@ -54,3 +54,4 @@ var ref = firebase.database().ref("/");
     </script>
 
 </body>
+</html>
