--- a/class10/stepper.html
+++ b/class10/stepper.html
@@ -33,7 +33,7 @@
   firebase.initializeApp(firebaseConfig);
   firebase.analytics();
 
-var ref = firebase.database().ref("/");
+var ref = firebase.database().ref();
 
 	document.getElementById('candy-r').addEventListener('click', candyR, false);
 	document.getElementById('candy-l').addEventListener('click', turnOff, false);
