--- a/class10/stepper.html
+++ b/class10/stepper.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<button id="turn-on" name="turnon">Turn On </button>
+	<button id="turn-on" name="turnon">Right candy </button>
 	<button id="turn-off" name="turnoff">Turn Off </button>
 
 	<!-- The core Firebase JS SDK is always required and must be listed first -->
@@ -36,10 +36,10 @@
 	var ref = firebase.database().ref("/");
 
 	// make the buttons call the function below 
-	document.getElementById('turn-on').addEventListener('click', turnOn, false);
+	document.getElementById('turn-on').addEventListener('click', candyR, false);
 	document.getElementById('turn-off').addEventListener('click', turnOff, false);
 
-	function turnOn(){
+	function candyR(){
 		console.log("turning on");
 		ref.update({
 			"Candyr": "ON"
