--- a/class10/stepper.html
+++ b/class10/stepper.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-	<button id="r-candy" name="turnon">Right candy </button>
-	<button id="turn-off" name="turnoff">Turn Off </button>
+	<button id="r-candy" name="candyr">Right candy </button>
+	<button id="turn-off" name="turnoff">Left candy </button>
 
 	<!-- The core Firebase JS SDK is always required and must be listed first -->
 	<script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-app.js"></script>
