--- a/class10/stepper.html
+++ b/class10/stepper.html
@@ -43,7 +43,8 @@
 		console.log("turning on");
 		ref.update({
 			"Candyr": "ON"
-			sleep(3100);
+		});
+		ref.update({
 			"Candyr": "OFF"
 		});
 	}
