--- a/class10/stepper.html
+++ b/class10/stepper.html
@@ -44,7 +44,10 @@
 		ref.update({
 			"Candyr": "ON"
 		});
-		sleep(1000).then(() => {ref.update({"Candyr": "OFF"});} );
+		sleep(1000);
+		 ref.update({
+		 	"Candyr": "OFF"
+		 });
 	}
 
 	function turnOff(){
