--- a/class9/led.html
+++ b/class9/led.html
@@ -17,14 +17,6 @@
 	     https://firebase.google.com/docs/web/setup#available-libraries -->
 	<script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-database.js"></script>
 
-	<script>
-	// Your web app's Firebase configuration
-<!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-app.js"></script>
-
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-analytics.js"></script>
 
 <script>
   // Your web app's Firebase configuration
@@ -40,6 +32,7 @@
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
 
 	// Get a database reference to our blog
 	var ref = firebase.database().ref("/");
