--- a/class10/arduinos.html
+++ b/class10/arduinos.html
@@ -40,7 +40,7 @@
 #define FIREBASE_HOST "stepper-638f3.firebaseio.com/"  // the project name address from firebase id
 #define FIREBASE_AUTH "QonYwNYYS2CEvlLR1zUruaSzQxMyTSTl3gy8ufrU" // the secret key generated from firebase
 #define WIFI_SSID "HUAWEI-A40A"                                // input your home or public wifi name
-#define WIFI_PASSWORD "95964506"  
+#define WIFI_PASSWORD "xxxxxx"  
 
 String fireString = "";    // rigth motor status received from firebase
 String fireStringl = "";   // left motor status received from firebase
