--- a/Final-project/Final_projects.html
+++ b/Final-project/Final_projects.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="../mystyle.css">
 	<link  rel="icon"   href="../icon.png" type="image/png" />
-  <script src="script.js"></script>
+  <script src="../script.js"></script>
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/arduino-light.min.css">
   <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/highlight.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/arduino.min.js"></script>
@@ -35,7 +35,8 @@
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
   </div>  
 </nav>
-
+<h1>LED control with speech recognition</h1>
+<h3><a href="Process/process.html">Go to this <strong>website</strong> to see the process!</a></h3>
 
 </body>
 </html>
