--- a/SoundModel/index.html
+++ b/SoundModel/index.html
@@ -1,11 +1,10 @@
 <html><head>
   <meta charset="UTF-8">
   <title>Sound Classification using a pre-trained customized model and p5.js</title>
-  <script src="p5.min.js"></script>
   <script src="p5.dom.min.js"></script>
   <script src="ml5.min.js" type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/npm/p5@1.1.4/lib/p5.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/p5@1.1.4/lib/addons/p5.sound.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/p5@1.1.4/lib/addons/p5.sound.min.js:2"></script>
 <script src="https://unpkg.com/ml5@0.4.2/dist/ml5.min.js"></script>
 </head>
 
