--- a/SoundModel/index.html
+++ b/SoundModel/index.html
@@ -1,11 +1,12 @@
-<html><head>
-  <meta charset="UTF-8">
-  <title>Sound Classification using a pre-trained customized model and p5.js</title>
-  <script src="p5.dom.min.js"></script>
-  <script src="ml5.min.js" type="text/javascript"></script>
-<script src="https://cdn.jsdelivr.net/npm/p5@1.1.4/lib/p5.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/p5@1.1.4/lib/addons/p5.sound.min.js:2"></script>
-<script src="https://unpkg.com/ml5@0.4.2/dist/ml5.min.js"></script>
+<html>
+<head>
+  <script src="https://cdn.jsdelivr.net/npm/p5@1.1.4/lib/p5.min.js"></script>
+  
+  <script src="https://cdn.jsdelivr.net/npm/p5@1.1.4/lib/addons/p5.sound.min.js"></script>
+
+  <script src="https://unpkg.com/ml5@0.4.2/dist/ml5.min.js"></script>
+
+  <meta charset="utf-8" />
 </head>
 
 <body>
@@ -20,25 +21,6 @@
     </script>
   <h1>Teachable Machine</h1>
   <script src="sketch.js"></script>
-<!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-app.js"></script>
 
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-
-<script>
-  // Your web app's Firebase configuration
-  var firebaseConfig = {
-    apiKey: "AIzaSyAIRFvX5HPsCbqlmTZ8Q1n0R1YjljIZJBI",
-    authDomain: "final-project-ac183.firebaseapp.com",
-    databaseURL: "https://final-project-ac183.firebaseio.com",
-    projectId: "final-project-ac183",
-    storageBucket: "final-project-ac183.appspot.com",
-    messagingSenderId: "958472231173",
-    appId: "1:958472231173:web:57d42f9d729321bff8bf6c"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-</script>
 <!-- <script defer src="./sketch.js"></script> -->
 </body></html>
