--- a/SoundModel/index.html
+++ b/SoundModel/index.html
@@ -20,6 +20,8 @@
       });
     </script>
   <h1>Teachable Machine</h1>
+  <script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-database.js"></script>
   <script src="sketch.js"></script>
 
 <!-- <script defer src="./sketch.js"></script> -->
