--- a/SoundModel/index.html
+++ b/SoundModel/index.html
@@ -19,7 +19,7 @@
         console.log('No mic for you!')
       });
     </script>
-  <h1>Teachable Machine and LED</h1>
+  <h1>Teachable Machine and LED 1</h1>
   <script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-database.js"></script>
   <script src="sketch.js"></script>
