final page and random

--- a/Final-project/Final_projects.html
+++ b/Final-project/Final_projects.html
@@ -37,6 +37,19 @@
 </nav>
 <h1>LED control with speech recognition</h1>
 <h3><a href="Process/process.html">Go to this <strong>website</strong> to see the process!</a></h3>
+<div class="paragraph">
+	<h4><strong>Hardware</strong></h4>
 
+	<p>
+		The hardware was simple two cylinders with a screw at the end a top to cover the inside circuit and a base to bring everything together.   All the pieces were print with PLA white and transparent to let the light come out. I had to cut the screw part and glue it to the first top that I create because the base part broke. However, you can see the 3D model of the original version. Talking about the circuit, it is really simple. Each huzzah board is connected to a led strip, ground, 3V and pin 14 in which I soldier a cable to a resistor. Also, both of them get their power from a power bank.
+	</p>
+	<iframe src="https://gmail988452.autodesk360.com/shares/public/SH919a0QTf3c32634dcf1a9be6154d80f2ad?mode=embed" width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+
+	<img src="w1.png" alt="4 pic" style="width: 45%"><br><br>
+
+	<h4><strong>Code</strong></h4>
+	<h4><strong>The MIC problem</strong></h4>
+	<h4><strong>What comes next?</strong></h4>
+</div>
 </body>
 </html>
