--- a/Final-project/Process/process.html
+++ b/Final-project/Process/process.html
@@ -36,7 +36,7 @@
   </div>  
 </nav>
 <h1>LED control with speech recognition</h1>
-<h2>-The backstage-</h2>
+<h2>-The process-</h2>
 <div class="paragraph">
   <p>
     To understand why I chose my final project you need to know a little bit about my story. I'm a Latin woman burn and race at the end of the continent, Chile. When I was 12 years old, I started to get interested in tech, and I had the opportunity to take a robotics class at the University of Chile. Back then, robotics and technology in Chile weren't a big thing in young people; just university students and professionals did it. After that, I apply for the team at the University (for high school students), and I got in. There I discover that tech and mechanics are my passion. However, I also realized code is not my favorite thing at all. I prefer, and I'm better at electronics. So after changing my project a few times and leave off my favorite thing (motors), I decided to make something with simple hardware but with complicated code.
